infra-helm-charts/eck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kibana-dev.akhilsaidevops.online
spec:
  ingressClassName: nginx
  rules:
    - host: kibana-dev.akhilsaidevops.online
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: es-kb-quickstart-eck-kibana-kb-http
                port:
                  number: 5601
            path: /
